[FEAT]Actualización en beneficio Bono Fidelidad

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -134,8 +134,7 @@
                 </div>
         </section>
         <section class="container">
-                <h2 class="linea title_alojamiento" id="alojamiento"><span>Nuestros Departamentos</span></h2>
-                <!-- <h2 class="title_alojamiento" id="alojamiento">Nuestros Departamentos</h2> -->
+                <h2 class="linea title_alojamiento" id="alojamiento"><span class="t_alojamiento">Nuestros Departamentos</span></h2>
                 <article class="detalle_departamento">
                         <div class="carousel">
                                 <div class="glider-contain">
@@ -183,6 +182,56 @@
                                                                 src="../img/banner_departamentos/depto_10.jpeg"
                                                                 alt="" />
                                                 </div>
+                                                <div class="banner__1">
+                                                        <img class="banner__img1"
+                                                                src="../img/banner_departamentos/depto_11.jpeg"
+                                                                alt="" />
+                                                </div>
+                                                <div class="banner__1">
+                                                        <img class="banner__img1"
+                                                                src="../img/banner_departamentos/depto_12.jpeg"
+                                                                alt="" />
+                                                </div>
+                                                <div class="banner__1">
+                                                        <img class="banner__img1"
+                                                                src="../img/banner_departamentos/depto_13.jpeg"
+                                                                alt="" />
+                                                </div>
+                                                <div class="banner__1">
+                                                        <img class="banner__img1"
+                                                                src="../img/banner_departamentos/depto_14.jpeg"
+                                                                alt="" />
+                                                </div>
+                                                <div class="banner__1">
+                                                        <img class="banner__img1"
+                                                                src="../img/banner_departamentos/depto_15.jpeg"
+                                                                alt="" />
+                                                </div>
+                                                <div class="banner__1">
+                                                        <img class="banner__img1"
+                                                                src="../img/banner_departamentos/depto_16.jpeg"
+                                                                alt="" />
+                                                </div>
+                                                <div class="banner__1">
+                                                        <img class="banner__img1"
+                                                                src="../img/banner_departamentos/depto_17.jpeg"
+                                                                alt="" />
+                                                </div>
+                                                <div class="banner__1">
+                                                        <img class="banner__img1"
+                                                                src="../img/banner_departamentos/depto_18.jpeg"
+                                                                alt="" />
+                                                </div>
+                                                <div class="banner__1">
+                                                        <img class="banner__img1"
+                                                                src="../img/banner_departamentos/depto_19.jpeg"
+                                                                alt="" />
+                                                </div>
+                                                <div class="banner__1">
+                                                        <img class="banner__img1"
+                                                                src="../img/banner_departamentos/depto_20.jpeg"
+                                                                alt="" />
+                                                </div>
                                         </div>
                                         <button aria-label="Next" class="glider-next" id="glider-next1">
                                                 <i class="fas fa-chevron-right fa-lg"></i>
@@ -191,47 +240,62 @@
                                 <div role="tablist" class="dots1"></div>
                         </div>
                         <div class="glider_text">
-                                <h2 style="text-align: center;">Para tu comodidad se encuentran ubicados
+                                <span class="title_subsidio" style="text-align: center;">Para tu comodidad se encuentran ubicados
                                         estratégicamente frente a Casa Central en AVDA. PTE. JULIO A. ROCA 771 - CABA
-                                </h2>
+                                </span>
                                 <a class="link_protocolo" href="../docs/Protocolo_uso_departamentos_CABA-010124.pdf"
-                                        target="_blank">Condiciones de Uso y Reserva</a>
+                                        target="_blank"><iconify-icon icon="typcn:arrow-right-thick"></iconify-icon> Condiciones de Uso y Reserva</a>
                                 <br>
-                                <h3>Podrás hacer uso de todos los amenities: pileta, lavadero, parrilla y gimnasio.</h3>
+                                <span class="text_subsidio">Podrás hacer uso de todos los amenities: pileta, lavadero, parrilla y gimnasio.</span>
                                 <br>
-                                <h3>Para reservas o consultas comunicate al whatsapp
+                                <span class="text_subsidio">Para reservas o consultas comunicate al whatsapp
                                         <a class="wsp_reserva" style="font-size: large;"
                                                 href="https://api.whatsapp.com/send/?phone=5491127723511"
                                                 target="_blank"><iconify-icon class="icon_reserva"
                                                         icon="logos:whatsapp-icon"></iconify-icon></a>
                                         (011-1527723511) en el horario de 9 a 17 hs.
-                                </h3>
+                                </span>
                                 <br>
-                                <h3>Datos de cuenta para pago de estadía:</h3>
-                                <h3 style="color: var(--primary-color-solid);">CBU: 0110010540001013410080</h3>
-                                <h3 style="color: var(--primary-color-solid);">Alias: RESERVAS.DPTOS.AP</h3>
-                                <h4>Se recomienda copiar y pegar los datos previos.</h4>
+                                <span class="text_subsidio">Datos de cuenta para pago de estadía:</span>
+                                <span class="text_subsidio" style="color: var(--primary-color-solid);">CBU: 0110010540001013410080</span>
+                                <span class="text_subsidio" style="color: var(--primary-color-solid);">Alias: RESERVAS.DPTOS.AP</span>
+                                <span class="text_subsidio">Se recomienda copiar y pegar los datos previos.</span>
                         </div>
                 </article>
-                <h2 class="linea title_alojamiento" id="alojamiento"><span>Subsidio por Casamiento, Nacimiento o Adopción</span></h2>
-                <!-- <h2 class="title_alojamiento" id="subsidio">Subsidio por Casamiento, Nacimiento o Adopción</p><hr> -->
-                </h2>
+                <h2 class="linea title_alojamiento" id="alojamiento"><span class="t_alojamiento">Subsidio por Casamiento, Nacimiento o Adopción</span></h2>
                 <article class="detalle_subsidio">
-                        <h2>Siempre a tu lado en los momentos importantes</h2>
+                        <span class="title_subsidio"> Siempre a tu lado en los momentos importantes. Recibirás $60.000,00 para lo que desees</span>
                         <a class="link_protocolo " href="../docs/SUBSIDIOS_POR_CASAMIENTO_Y_NACIMIENTO_O_ADOPCIÓN.pdf"
-                                target="_blank">Reglamento de ortorgamiento</a>
-                        <h3>Es un trámite sencillo y puedes canalizarlo a través del Delegado de Distrito o del
-                                Representante de tu Seccional</h3>
+                                target="_blank"><iconify-icon icon="typcn:arrow-right-thick"></iconify-icon> Reglamento de ortorgamiento</a>
+                        <span class="text_subsidio">Es un trámite sencillo y puedes canalizarlo a través del Delegado de Distrito o del
+                                Representante de tu Seccional</span>
                         <br>
-                        <h3>Debes contar con la siguiente documentación:</h3>
+                        <span class="text_subsidio">Debes contar con:</span>
+                        <br>
                         <ul>
-                                <li><iconify-icon icon="healthicons:i-documents-accepted-outline"></iconify-icon>Recibo
-                                        de Sueldo</li>
-                                <li><iconify-icon
-                                                icon="healthicons:i-documents-accepted-outline"></iconify-icon>Constancia
-                                        de CBU</li>
-                                <li><iconify-icon icon="healthicons:i-documents-accepted-outline"></iconify-icon>Nota
-                                        solicitando el beneficio firmada por el afiliado</li>
+                                <li class="lista_beneficio"><iconify-icon style="font-size: var(--font-small);" icon="healthicons:i-documents-accepted-outline"></iconify-icon><span class="text_subsidio">Certificado de Matrimonio legalizada</span></li>
+                                <li class="lista_beneficio"><iconify-icon style="font-size: var(--font-small);" icon="healthicons:i-documents-accepted-outline"></iconify-icon><span class="text_subsidio">Sentencia firme de adopción plena o copia autenticada del oficio</span></li>
+                                <li class="lista_beneficio"><iconify-icon style="font-size: var(--font-small);" icon="healthicons:i-documents-accepted-outline"></iconify-icon><span class="text_subsidio">Nota solicitando el beneficio firmada por el afiliado</span></li>
+                                <li class="lista_beneficio"><iconify-icon style="font-size: var(--font-small);" icon="healthicons:i-documents-accepted-outline"></iconify-icon><span class="text_subsidio">Fotocopia de Recibo de Sueldo</span></li>
+                                <li class="lista_beneficio"><iconify-icon style="font-size: var(--font-small);" icon="healthicons:i-documents-accepted-outline"></iconify-icon><span class="text_subsidio">Constancia de CBU</span></li>
+                                <li class="lista_beneficio"><iconify-icon style="font-size: var(--font-small);" icon="healthicons:i-documents-accepted-outline"></iconify-icon><span class="text_subsidio">Fotocopia de DNI</span></li>
+                        </ul>
+                </article>
+                <h2 class="linea title_alojamiento" id="alojamiento"><span class="t_alojamiento">Bono Fidelidad</span></h2>
+                <article class="detalle_subsidio">
+                        <span class="title_subsidio"> Te acompañamos en tu camino luego del paso por Vialidad Nacional </span>
+                        <a class="link_protocolo " href="../docs/Protocolo_Bono_fidelidad_270421.pdf"
+                                target="_blank"><iconify-icon icon="typcn:arrow-right-thick"></iconify-icon> Protocolo Bono Fidelidad</a>
+                        <span class="text_subsidio">Destinado al afiliado que haya mantenido de forma
+                                consecutiva y correlativa en el tiempo, su afiliación a esta asociación y que cumplan con las pautas estipuladas en el Protocolo.</span>
+                        <br>
+                        <span class="text_subsidio">El monto del beneficio al afiliado se determinará de acuerdo a la cantidad de años de antigüedad como afiliada/o de esta Asociación: </span>
+                        <br>
+                        <ul>
+                                <li class="lista_beneficio"><iconify-icon style="font-size: var(--font-small);" icon="healthicons:i-documents-accepted-outline"></iconify-icon><span class="text_subsidio">Más de 10 años y hasta 14 años 11 meses y 30 días de antigüedad en la Asociación: 1000 u$s.</span></li>
+                                <li class="lista_beneficio"><iconify-icon style="font-size: var(--font-small);" icon="healthicons:i-documents-accepted-outline"></iconify-icon><span class="text_subsidio">Más de 15 años y hasta 19 años 11 meses y 30 días de antigüedad en la Asociación: 1500 u$s.</span></li>
+                                <li class="lista_beneficio"><iconify-icon style="font-size: var(--font-small);" icon="healthicons:i-documents-accepted-outline"></iconify-icon><span class="text_subsidio">Más de 20 años y hasta 24 años 11 meses y 30 días de antigüedad en la Asociación: 2000 u$s.</span></li>
+                                <li class="lista_beneficio"><iconify-icon style="font-size: var(--font-small);" icon="healthicons:i-documents-accepted-outline"></iconify-icon><span class="text_subsidio">Más de 25 años de antigüedad en la Asociación: 2500 u$s.</span></li>
                         </ul>
                 </article>
         </section>
