[FEAT]Convenio con hoteles-2

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -619,7 +619,7 @@
             ><iconify-icon icon="typcn:arrow-right-thick"></iconify-icon
             ><span>Realiza aquí tu reserva</span></a
           >
-          <div class="detalle_uthgra opacidad"></div>
+          <div class="detalle_uthgra opacidad imgHoteles"></div>
           <div class="tarifas text_subsidio">
             <p style="text-align: center;">
               Se encuentra ubicado en las cercanías del distrito financiero y rodeado de los más
