[FEAT] Convenio con hoteles-15

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -547,10 +547,29 @@
       <h2 class="linea title_alojamiento" id="descuentosHoteles">
         <span class="t_alojamiento">Descuentos en Hoteles</span>
       </h2>
+      <div class="info_convenios">
       <span class="title_convenioHoteles title_subsidio">
         Los afiliados a nuestra "Asociación Gremial" acceden a convenios con
         prestigiosos Hoteles
-      </span>
+      </span><br>
+      <span class="text_subsidio" style="text-align: justify;"
+      ><iconify-icon
+        style="font-size: var(--font-xsmall);"
+        icon="healthicons:i-documents-accepted-outline"
+      ></iconify-icon
+      >Es importante que realices la reserva con tiempo e informes siempre
+      que eres afiliado en la "Asociación Gremial de Profesionales y
+      Personal Superior de Vialidad Nacional"</span
+    ><br>
+    <span class="text_subsidio" style="text-align: justify;"
+      ><iconify-icon
+        style="font-size: var(--font-xsmall);"
+        icon="healthicons:i-documents-accepted-outline"
+      ></iconify-icon
+      >Ingresa a los sitios y determina cuál se adapta más a tus
+      necesidades</span
+    >
+  </div>
       <article class="detalle_convenioHoteles">
         <div class="hotel">
           <span class="title_hotel">HOTEL AVENIDA BUENOS AIRES</span>
@@ -631,7 +650,7 @@
         </div>
         <div class="hotel">
           <span class="title_hotel">INFORMACION GENERAL</span>
-          <span class="text_subsidio" style="text-align: justify;"
+          <!-- <span class="text_subsidio" style="text-align: justify;"
             ><iconify-icon
               style="font-size: var(--font-small);"
               icon="healthicons:i-documents-accepted-outline"
@@ -647,7 +666,7 @@
             ></iconify-icon
             >Ingresa a los sitios y determina cuál se adapta más a tus
             necesidades</span
-          >
+          > -->
           <div></div>
         </div>
       </article>
