Modificacion archivos a php

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -72,7 +72,7 @@
             <a class="navbar__link" href="./beneficios.html">Beneficios</a>
           </li>
           <li class="navbar__item submenuopen">
-            <a class="navbar__link" href="#">Capacitación</a>
+            <a class="navbar__link" href="#">Actividad Gremial</a>
           </li>
           <li class="navbar__item submenuopen">
             <a class="navbar__link" href="#">Contacto</a>
@@ -736,6 +736,7 @@
     ></a>
     <script src="../js/menu.js"></script>
     <script src="../js/scroll.js"></script>
+    <!-- <script src="../js/infoHotel.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <!-- <script src="../js/glideBeneficios.js"></script> -->
     <script src="../js/glide.js"></script>
