--- a/pages/home.html
+++ b/pages/home.html
@@ -58,7 +58,7 @@
             <a class="navbar__link" href="./beneficios.html">Beneficios</a>
           </li>
           <li class="navbar__item submenuopen">
-            <a class="navbar__link" href="./capacitacion.html">Capacitación</a>
+            <a class="navbar__link" href="./capacitacion.html">Actividad Gremial</a>
           </li>
           <li class="navbar__item submenuopen">
             <a class="navbar__link" href="./contacto">Contacto</a>
