--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -31,7 +31,7 @@
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="./beneficios.html">Beneficios</a>
                 </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Capacitación</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Actividad Gremial</a>
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Contacto</a>
                 </li>
